crates/tla-core/src/diagnostic/snapshots/tla_core__diagnostic__tests__snapshot_module_not_found.snap
---
source: crates/tla-core/src/diagnostic/tests.rs
assertion_line: 178
expression: "render_to_string(&d, \"test.tla\", source)"
---
Error: module not found: Missing
   ╭─[test.tla:2:9]
   │
 2 │ EXTENDS Missing
   │         ───┬───  
   │            ╰───── cannot find module 'Missing'
   │ 
   │ Help: Check the module name and ensure the file exists
───╯
